src/test/deca/context/invalid/homemade/print_method.deca
// Description :
// Trying to print a method in main

class A {
    void x() {
    }
}

{
    A a = new A();
    println(a.x);
}